2001-05-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-search.el (top-level): Removed magic string to decide coding
	system.

	* w3m-xmas.el (top-level): Ditto.

	* w3m-e21.el (top-level): Ditto.

2001-05-07  Masatake YAMATO  <jet@gyve.org>

	* w3m-xmas.el (w3m-setup-menu): Implemented.

2001-05-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Up to 1.0pre1.
	(w3m-rendering-region): Removed form support.
	(w3m-fontify): Ditto.
	(w3m-use-form): Removed.
	(top-level): Removed autoload code of form support.
	(w3m-mode-map): Moved in order to avoid compile warning.

	* w3m-form.el: Removed.

2001-05-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-attributes): Check validity of contents length,
	to avoid the problem reported in [emacs-w3m:00682].

2001-05-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-bookmark.el (w3m-bookmark-section-history): Revival.
	(w3m-bookmark-title-history): Ditto.

	* w3m.el (w3m-extended-characters-table): Add "\x90" entry.
	(w3m-setup-menu): Move from w3m-e21.el.
	(w3m-mode): Modify doc-string for describe mode.
	(top-level): Add key-bind, w3m-antenna(), w3m-weather() and w3m-search().
	(w3m-about-history): Set w3m work buffer as multibyte.

	* w3m-e21.el (w3m-setup-menu): Move to w3m.el.

2001-05-03  Masatake YAMATO  <jet@gyve.org>

	* w3m.el (w3m-mode): Call w3m-setup-menu.

	* w3m-xmas.el (w3m-setup-menu): New stub.

	* w3m-e21.el (w3m-setup-menu): New function.

2001-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-about-history): Replace ">" with "&gt;".

2001-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-about-history): New implementation without recursive
	funcall'ing.
	(w3m-about-history-1): Removed.

2001-04-26  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-gnome.el (shimbun-get-headers):
	Retrieve index as binary and decode with shimbun-gnome-coding-system.

	* shimbun/sb-xemacs.el (shimbun-get-headers): Likewise;
	MIME encode 'from' string.
