@@ -1,3 +1,12 @@
+2001-05-07  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>
+
+	* shimbun/shimbun.el (shimbun-expand-url): Define as an alias for
+	`w3m-expand-url'.
+
+	* shimbun/sb-hns.el (shimbun-get-headers): Set proper url to xref.
+	(shimbun-hns-article): Follow the change above.
+	(shimbun-article): Encode headers.
+
 2001-05-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m-search.el (top-level): Removed magic string to decide coding
